Allocate wasi context only once