@@ -2,18 +2,15 @@
 
 <p align="center"><img width="50%" src="https://github.com/wasm3/wasm3/raw/master/extra/screenshot-android.png"></p>
 
-
 Install Android SDK Tools, then:
 
 ```sh
 export ANDROID_HOME=/opt/android-sdk/
-export PATH=$ANDROID_HOME/tools/bin:$PATH
+export PATH=$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH
 ```
 
-```
-# On my Ubuntu, I had to:
-#export SDKMANAGER_OPTS="-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee"
-
+Install NDK:
+```sh
 sdkmanager --install ndk-bundle
 ```
 
